// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LinkList renders horizontal lists correctly 1`] = `
<ul
  className="cl_link_list"
>
  <li>
    <a
      href="/"
    >
      Vestibulum
    </a>
  </li>
  <li>
    <a
      href="#"
      rel="noopener"
      target="_blank"
    >
      Pellentesque venenatis
    </a>
  </li>
  <li>
    <a
      href="#"
      rel="noopener"
      target="_blank"
    >
      Fusce
    </a>
  </li>
  <li>
    <a
      href="#"
      rel="noopener"
      target="_blank"
    >
      Etiam lacinia dolor
    </a>
  </li>
  <li>
    <span
      className="dropdown"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      role="button"
      tabIndex={0}
    >
      <span
        className="dropdown_trigger"
      >
        Suspendisse semper
      </span>
      <ul
        className="dropdown_menu"
      >
        <li>
          <a
            href="/"
          >
            Vestibulum vitae
          </a>
        </li>
        <li>
          <a
            href="#"
            rel="noopener"
            target="_blank"
          >
            Pellentesque tempor venenatis
          </a>
        </li>
        <li>
          <a
            href="#"
            rel="noopener"
            target="_blank"
          >
            Fusce molestie
          </a>
        </li>
        <li>
          <a
            href="#"
            rel="noopener"
            target="_blank"
          >
            Etiam in lacinia dolor
          </a>
        </li>
      </ul>
    </span>
  </li>
  <li>
    <a
      className="button button"
      rel="noopener"
      target="_blank"
    />
  </li>
</ul>
`;

exports[`LinkList renders vertical lists correctly 1`] = `
<ul
  className="cl_link_list cl_link_list_is_vertical"
>
  <li>
    <strong>
      Quisque
    </strong>
  </li>
  <li>
    <a
      href="/"
    >
      Vestibulum vitae
    </a>
  </li>
  <li>
    <a
      href="#"
      rel="noopener"
      target="_blank"
    >
      Pellentesque tempor venenatis
    </a>
  </li>
  <li>
    <a
      href="#"
      rel="noopener"
      target="_blank"
    >
      Fusce molestie
    </a>
  </li>
  <li>
    <a
      href="#"
      rel="noopener"
      target="_blank"
    >
      Etiam in lacinia dolor
    </a>
  </li>
</ul>
`;
